fixing the input field width problem with smaller screens going off screen

--- a/src/components/Tasks/TaskForm.css
+++ b/src/components/Tasks/TaskForm.css
@@ -24,3 +24,9 @@
 .new-task__actions {
   text-align: right;
 }
+
+@media (max-width: 600px) {
+  .new-task__control input {
+    width: 10rem;
+  }
+}
